--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,86 @@
+alembic==1.4.2
+appdirs==1.4.4
 asgiref==3.3.1
+bcrypt==3.1.7
+beautifulsoup4==4.9.1
+certifi==2020.4.5.1
+cffi==1.14.0
+chardet==3.0.4
+click==7.1.2
+cryptography==3.4.6
+cycler==0.10.0
+DateTime==4.3
+defusedxml==0.7.1
+distlib==0.3.0
 dj-database-url==0.5.0
 Django==3.1.6
+django-allauth==0.44.0
+django-bootstrap4==2.3.1
+django-crispy-forms==1.11.1
 django-heroku==0.3.1
+dominate==2.6.0
+filelock==3.0.12
+Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
+Flask-Migrate==2.5.3
+Flask-SQLAlchemy==2.4.3
+Flask-WTF==0.14.3
+get==2019.4.13
+gevent==20.9.0
+greenlet==0.4.17
 gunicorn==20.0.4
+idna==2.9
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==0.15.1
+kiwisolver==1.2.0
+Mako==1.1.3
+MarkupSafe==1.1.1
+matplotlib==3.2.1
+MouseInfo==0.1.3
+mysql-connector==2.2.9
+mysql-connector-python==8.0.20
+nltk==3.5
+numpy==1.18.3
+oauthlib==3.1.0
+paramiko==2.7.1
+Pillow==7.1.2
+post==2019.4.13
+protobuf==3.12.2
 psycopg2==2.8.6
-pytz==2021.1
+public==2019.4.13
+PyAutoGUI==0.9.50
+pycparser==2.20
+PyGetWindow==0.0.8
+PyJWT==2.0.1
+PyMsgBox==1.0.7
+PyMySQL==0.10.1
+PyNaCl==1.3.0
+pyparsing==2.4.7
+pyperclip==1.8.0
+PyRect==0.1.4
+PyScreeze==0.1.26
+python-dateutil==2.8.1
+python-editor==1.0.4
+python3-openid==3.2.0
+PyTweening==1.0.3
+pytz==2019.3
+query-string==2019.4.13
+regex==2020.5.14
+request==2019.4.13
+requests==2.23.0
+requests-oauthlib==1.3.0
+six==1.14.0
+soupsieve==2.0.1
+SQLAlchemy==1.3.17
 sqlparse==0.4.1
+tqdm==4.46.0
+urllib3==1.25.9
+virtualenv==20.0.21
+visitor==0.1.3
+websocket-client==0.57.0
+Werkzeug==1.0.1
 whitenoise==5.2.0
-django-allauth
-postgres
-
-
+WTForms==2.3.1
+zope.event==4.5.0
+zope.interface==5.1.0
